Re-generate QML imports
This brings the output up-to-date with the latest generator changes
(qml_files among others) and fixes the URI parameter for QtQuick, etc.

Change-Id: Iafe7404ce12bf2132252d88ae38c4cc70c4f0d07
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/imports/CMakeLists.txt
+++ b/src/imports/CMakeLists.txt
@@ -4,47 +4,37 @@ add_subdirectory(builtins)
 add_subdirectory(qtqml)
 add_subdirectory(models)
 add_subdirectory(labsmodels)
-
 if(QT_FEATURE_qml_itemmodel)
     add_subdirectory(folderlistmodel)
 endif()
-
 if(QT_FEATURE_qml_worker_script)
     add_subdirectory(workerscript)
 endif()
-
 if(TARGET Qt::Sql)
     add_subdirectory(localstorage)
 endif()
-
 if(QT_FEATURE_settings)
     add_subdirectory(settings)
 endif()
-
 if(QT_FEATURE_statemachine)
     add_subdirectory(statemachine)
 endif()
-
 if(TARGET Qt::Quick)
     add_subdirectory(labsanimation)
     add_subdirectory(layouts)
     add_subdirectory(qtquick2)
     add_subdirectory(window)
     add_subdirectory(wavefrontmesh)
-
-    if(TARGET Qt::Test)
-        add_subdirectory(testlib)
-    endif()
-
-    if(QT_FEATURE_systemsemaphore)
-        add_subdirectory(sharedimage)
-    endif()
-
-    if(QT_FEATURE_quick_particles)
-        add_subdirectory(particles)
-    endif()
-
-    if(QT_FEATURE_quick_path AND QT_FEATURE_thread)
-        add_subdirectory(shapes)
-    endif()
+endif()
+if(TARGET Qt::Quick AND TARGET Qt::Test)
+    add_subdirectory(testlib)
+endif()
+if(QT_FEATURE_systemsemaphore AND TARGET Qt::Quick)
+    add_subdirectory(sharedimage)
+endif()
+if(QT_FEATURE_quick_particles AND TARGET Qt::Quick)
+    add_subdirectory(particles)
+endif()
+if(QT_FEATURE_quick_path AND QT_FEATURE_thread AND TARGET Qt::Quick)
+    add_subdirectory(shapes)
 endif()
