--- a/src/imports/window/CMakeLists.txt
+++ b/src/imports/window/CMakeLists.txt
@@ -6,8 +6,8 @@
 
 add_qml_module(windowplugin
     CPP_PLUGIN
-    URI "QtQuick.Window.2"
     TARGET_PATH "QtQuick/Window.2"
+    URI "QtQuick.Window"
     VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
     RESOURCE_PREFIX "/qt-project.org/imports"
     SOURCES
