--- a/src/imports/models/CMakeLists.txt
+++ b/src/imports/models/CMakeLists.txt
@@ -6,8 +6,8 @@
 
 add_qml_module(modelsplugin
     CPP_PLUGIN
-    URI "QtQml.Models.2"
     TARGET_PATH "QtQml/Models.2"
+    URI "QtQml.Models"
     VERSION "2.${CMAKE_PROJECT_VERSION_MINOR}"
     RESOURCE_PREFIX "/qt-project.org/imports"
     SOURCES
