Generate CMake projects for qmltooling
Generate missing CMake projecst for qmltooling. Required for tests to
pass.

Change-Id: I7dbf434a547f4fad13f403f0760406132aef5e9d
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/plugins/qmltooling/packetprotocol/CMakeLists.txt
+++ b/src/plugins/qmltooling/packetprotocol/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 add_qt_module(PacketProtocol
     STATIC
+    INTERNAL_MODULE
     SOURCES
         qpacket.cpp qpacket_p.h
         qpacketprotocol.cpp qpacketprotocol_p.h
