Rename alias resource properties
Rename all alias resource properteis to QT_RESOURCE_ALIAS to match
the latest changes in qtbase.

Add special case to install_cmake since it doesn't have any cmake files
in that directory.

Change-Id: Icf78ed1e126daa149b62aa418fd5f7ad8579e2bc
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -5,7 +5,9 @@ add_subdirectory(quick)
 add_subdirectory(quicktest)
 add_subdirectory(qmldevtools)
 add_subdirectory(cmake)
-add_subdirectory(installed_cmake)
+# special case begin
+# add_subdirectory(installed_cmake)
+# special case end
 add_subdirectory(toolsupport)
 if(NOT APPLE_UIKIT)
     add_subdirectory(qmltest)
