Don't add_subdirectory tests/auto/cmake
Otherwise the configuration will fail.
Those tests are meant for Qt 5.

Change-Id: Idd2be894145faa579aa11f303623a5aaf2e17d25
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(qml)
 add_subdirectory(quick)
 add_subdirectory(quicktest)
 add_subdirectory(qmldevtools)
-add_subdirectory(cmake)
+# add_subdirectory(cmake) # special case remove
 # special case begin
 # add_subdirectory(installed_cmake)
 # special case end
