Fix build without features.qml-delegate-model
Change-Id: I362febbb395e1d6d55d4b4aac18c6e8bba90bb0c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>

--- a/src/qmlmodels/configure.json
+++ b/src/qmlmodels/configure.json
@@ -30,7 +30,7 @@
             "label": "QML table model",
             "purpose": "Provides the TableModel QML type.",
             "section": "QML",
-            "condition": "features.qml-itemmodel",
+            "condition": "features.qml-itemmodel && features.qml-delegate-model",
             "output": [ "privateFeature" ]
         }
     },
