--- a/examples/qml/referenceexamples/CMakeLists.txt
+++ b/examples/qml/referenceexamples/CMakeLists.txt
@@ -1,19 +1,17 @@
 # Generated from referenceexamples.pro.
 
 add_subdirectory(adding)
-#add_subdirectory(coercion)
-#add_subdirectory(default)
-#add_subdirectory(properties)
-#add_subdirectory(methods)
-
-#if(TARGET Qt::Widgets)
-    #add_subdirectory(extended)
-#endif()
-
-#if(TARGET Qt::Quick)
-    #add_subdirectory(attached)
-    #add_subdirectory(binding)
-    #add_subdirectory(grouped)
-    #add_subdirectory(signal)
-    #add_subdirectory(valuesource)
-#endif()
+add_subdirectory(coercion)
+add_subdirectory(default)
+add_subdirectory(properties)
+add_subdirectory(methods)
+if(TARGET Qt::Widgets)
+    add_subdirectory(extended)
+endif()
+if(TARGET Qt::Quick)
+    add_subdirectory(attached)
+    add_subdirectory(binding)
+    add_subdirectory(grouped)
+    add_subdirectory(signal)
+    add_subdirectory(valuesource)
+endif()
