--- a/examples/quick/mousearea/CMakeLists.txt
+++ b/examples/quick/mousearea/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from adding.pro.
+# Generated from mousearea.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(adding LANGUAGES CXX)
+project(mousearea LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,31 +12,35 @@ set(CMAKE_AUTOUIC ON)
 set(INSTALL_EXAMPLEDIR "examples")
 
 find_package(Qt6 COMPONENTS Core)
+find_package(Qt6 COMPONENTS Gui)
+find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS Qml)
 
-add_qt_gui_executable(adding
+add_qt_gui_executable(mousearea
     main.cpp
-    person.cpp person.h
 )
-target_link_libraries(adding PUBLIC
+target_link_libraries(mousearea PUBLIC
     Qt::Core
+    Qt::Gui
     Qt::Qml
+    Qt::Quick
 )
 
 # Resources:
-set(adding_resource_files
-    "example.qml"
+set(mousearea_resource_files
+    "mousearea-wheel-example.qml"
+    "mousearea.qml"
 )
 
-QT6_ADD_RESOURCES(adding "adding"
+QT6_ADD_RESOURCES(mousearea "mousearea"
     PREFIX
-        "/"
+        "/mousearea"
     FILES
-        ${adding_resource_files}
+        ${mousearea_resource_files}
 )
 
 
-install(TARGETS adding
+install(TARGETS mousearea
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
