--- a/examples/qml/referenceexamples/extended/CMakeLists.txt
+++ b/examples/qml/referenceexamples/extended/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from adding.pro.
+# Generated from extended.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(adding LANGUAGES CXX)
+project(extended LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,31 +12,35 @@ set(CMAKE_AUTOUIC ON)
 set(INSTALL_EXAMPLEDIR "examples")
 
 find_package(Qt6 COMPONENTS Core)
+find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Qml)
+find_package(Qt6 COMPONENTS Widgets)
 
-add_qt_gui_executable(adding
+add_qt_gui_executable(extended
+    lineedit.cpp lineedit.h
     main.cpp
-    person.cpp person.h
 )
-target_link_libraries(adding PUBLIC
+target_link_libraries(extended PUBLIC
     Qt::Core
+    Qt::Gui
     Qt::Qml
+    Qt::Widgets
 )
 
 # Resources:
-set(adding_resource_files
+set(extended_resource_files
     "example.qml"
 )
 
-QT6_ADD_RESOURCES(adding "adding"
+QT6_ADD_RESOURCES(extended "extended"
     PREFIX
         "/"
     FILES
-        ${adding_resource_files}
+        ${extended_resource_files}
 )
 
 
-install(TARGETS adding
+install(TARGETS extended
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
