--- a/examples/quick/layouts/CMakeLists.txt
+++ b/examples/quick/layouts/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from shell.pro.
+# Generated from layouts.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(shell LANGUAGES CXX)
+project(layouts LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,17 +12,34 @@ set(CMAKE_AUTOUIC ON)
 set(INSTALL_EXAMPLEDIR "examples")
 
 find_package(Qt6 COMPONENTS Core)
+find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Qml)
+find_package(Qt6 COMPONENTS Quick)
 
-add_qt_gui_executable(shell
+add_qt_gui_executable(layouts
     main.cpp
 )
-target_link_libraries(shell PUBLIC
+target_link_libraries(layouts PUBLIC
     Qt::Core
+    Qt::Gui
     Qt::Qml
+    Qt::Quick
 )
 
-install(TARGETS shell
+# Resources:
+set(layouts_resource_files
+    "layouts.qml"
+)
+
+QT6_ADD_RESOURCES(layouts "layouts"
+    PREFIX
+        "/layouts"
+    FILES
+        ${layouts_resource_files}
+)
+
+
+install(TARGETS layouts
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
