--- a/examples/quick/models/abstractitemmodel/CMakeLists.txt
+++ b/examples/quick/models/abstractitemmodel/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from adding.pro.
+# Generated from abstractitemmodel.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(adding LANGUAGES CXX)
+project(abstractitemmodel LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,31 +12,35 @@ set(CMAKE_AUTOUIC ON)
 set(INSTALL_EXAMPLEDIR "examples")
 
 find_package(Qt6 COMPONENTS Core)
+find_package(Qt6 COMPONENTS Gui)
 find_package(Qt6 COMPONENTS Qml)
+find_package(Qt6 COMPONENTS Quick)
 
-add_qt_gui_executable(adding
+add_qt_gui_executable(abstractitemmodel
     main.cpp
-    person.cpp person.h
+    model.cpp model.h
 )
-target_link_libraries(adding PUBLIC
+target_link_libraries(abstractitemmodel PUBLIC
     Qt::Core
+    Qt::Gui
     Qt::Qml
+    Qt::Quick
 )
 
 # Resources:
-set(adding_resource_files
-    "example.qml"
+set(abstractitemmodel_resource_files
+    "view.qml"
 )
 
-QT6_ADD_RESOURCES(adding "adding"
+QT6_ADD_RESOURCES(abstractitemmodel "abstractitemmodel"
     PREFIX
         "/"
     FILES
-        ${adding_resource_files}
+        ${abstractitemmodel_resource_files}
 )
 
 
-install(TARGETS adding
+install(TARGETS abstractitemmodel
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
