--- a/examples/quick/tableview/gameoflife/CMakeLists.txt
+++ b/examples/quick/tableview/gameoflife/CMakeLists.txt
@@ -1,7 +1,7 @@
-# Generated from adding.pro.
+# Generated from gameoflife.pro.
 
 cmake_minimum_required(VERSION 3.14)
-project(adding LANGUAGES CXX)
+project(gameoflife LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,31 +12,36 @@ set(CMAKE_AUTOUIC ON)
 set(INSTALL_EXAMPLEDIR "examples")
 
 find_package(Qt6 COMPONENTS Core)
+find_package(Qt6 COMPONENTS Gui)
+find_package(Qt6 COMPONENTS Quick)
 find_package(Qt6 COMPONENTS Qml)
 
-add_qt_gui_executable(adding
+add_qt_gui_executable(gameoflife
+    gameoflifemodel.cpp gameoflifemodel.h
     main.cpp
-    person.cpp person.h
 )
-target_link_libraries(adding PUBLIC
+target_link_libraries(gameoflife PUBLIC
     Qt::Core
+    Qt::Gui
     Qt::Qml
+    Qt::Quick
 )
 
 # Resources:
-set(adding_resource_files
-    "example.qml"
+set(qmake_immediate_resource_files
+    "gosperglidergun.cells"
+    "main.qml"
 )
 
-QT6_ADD_RESOURCES(adding "adding"
+QT6_ADD_RESOURCES(gameoflife "qmake_immediate"
     PREFIX
         "/"
     FILES
-        ${adding_resource_files}
+        ${qmake_immediate_resource_files}
 )
 
 
-install(TARGETS adding
+install(TARGETS gameoflife
     RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
     BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
     LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
