Support standalone tests building
Also fix some build issues regarding tests.

Change-Id: Ie9ba8a0b7932ae2b542614b6c824c4071ad0b548
Reviewed-by: Liang Qi <liang.qi@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(QtDeclarative
     LANGUAGES CXX C
 )
 
-find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network)
-find_package(Qt6 ${PROJECT_VERSION} CONFIG COMPONENTS Sql)
+find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core Gui Widgets Network
+                                           OPTIONAL_COMPONENTS Sql Concurrent)
+
 qt_build_repo()
