--- a/examples/quick/customitems/CMakeLists.txt
+++ b/examples/quick/customitems/CMakeLists.txt
@@ -1,7 +1,4 @@
 # Generated from customitems.pro.
 
-# special case begin
-# Needs public QML Plugin API
-#add_subdirectory(painteditem)
-# special case end
+add_subdirectory(painteditem)
 add_subdirectory(maskedmousearea)
