--- a/examples/quick/particles/CMakeLists.txt
+++ b/examples/quick/particles/CMakeLists.txt
@@ -4,7 +4,5 @@ add_subdirectory(affectors)
 add_subdirectory(customparticle)
 add_subdirectory(emitters)
 add_subdirectory(imageparticle)
-# Needs public QML Plugin API
-# add_subdirectory(itemparticle)
-# special case begin
+add_subdirectory(itemparticle)
 add_subdirectory(system)
