--- a/src/imports/sharedimage/CMakeLists.txt
+++ b/src/imports/sharedimage/CMakeLists.txt
@@ -5,9 +5,9 @@
 #####################################################################
 
 add_qml_module(sharedimageplugin
-    CPP_PLUGIN
     URI "Qt.labs.sharedimage"
     VERSION "1.0"
+    CLASSNAME QtQuickSharedImagePlugin
     SOURCES
         plugin.cpp
         qsharedimageloader.cpp qsharedimageloader_p.h
