Prospective Windows build fix, part 2
Revert commit 88f90868f7ba128011883ae3884cb9652708d385 and instead fix
the discrepancy between the target name (which results in
QT_BUILD_${target}_LIB) and the expected macro name for DLL
exports/imports (QT_BUILD_QMLTEST_NAME) the same way as fixed in
qtbase/src/testlib/CMakeLists.txt as per commit
e9c45bbdddd4df005bdaa5eea9740d351e6eaea2 in qtbase, using an explicit
define.

Change-Id: I710f48dbf089de661e765258fed1171f422ed6f8
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/qmltest/CMakeLists.txt
+++ b/src/qmltest/CMakeLists.txt
@@ -5,7 +5,6 @@
 #####################################################################
 
 add_qt_module(QuickTest
-    CONFIG_MODULE_NAME qmltest # special case
     QMAKE_MODULE_CONFIG $${QT.testlib.CONFIG}
     SOURCES
         qtestoptions_p.h
@@ -16,6 +15,7 @@ add_qt_module(QuickTest
     DEFINES
         QT_NO_FOREACH
         QT_NO_URL_CAST_FROM_STRING
+        QT_BUILD_QMLTEST_LIB # special case
     LIBRARIES
         Qt::TestPrivate
         Qt::Quick # special case
