Fix handling of QmlDevTools include headers
When doing a prefix build, standalone tests need to include the
QmlDevTools headers.

This means that the installed headers need to be passed via
INSTALL_INTERFACE genex, for prefix build case, and via
BUILD_INTERFACE for non-prefix build case.

Change-Id: I0d2a993e1ec0205e5b2a2d25e1e09e719e28a059
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Qt CMake Build Bot

--- a/src/qmldevtools/CMakeLists.txt
+++ b/src/qmldevtools/CMakeLists.txt
@@ -67,6 +67,13 @@ set(_qml_dev_tools_private_includes
     )
 target_include_directories(QmlDevTools PRIVATE ${_qml_dev_tools_private_includes})
 target_include_directories(QmlDevToolsPrivate INTERFACE ${_qml_dev_tools_private_includes})
+set(_qml_dev_tools_public_includes
+        $<INSTALL_INTERFACE:include/${qml_module}>
+        $<INSTALL_INTERFACE:include/${qml_module}/${PROJECT_VERSION}>
+        $<INSTALL_INTERFACE:include/${qml_module}/${PROJECT_VERSION}/${qml_module}>
+    )
+target_include_directories(QmlDevTools PRIVATE ${_qml_dev_tools_public_includes})
+target_include_directories(QmlDevToolsPrivate INTERFACE ${_qml_dev_tools_public_includes})
 
 # We build the qlalr sources into qmldevtools, so there's no link-time
 # dependency to QtQml. However we also include files in QmlDevTools such
