--- a/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
+++ b/tools/qmlcachegen/Qt5QuickCompilerConfig.cmake.in
@@ -50,7 +50,7 @@ but not all the files it references.
 
         get_filename_component(input_resource ${_resource} ABSOLUTE)
 
-        configure_file(${input_resource} ${new_resource_file} COPYONLY)
+        execute_process(COMMAND ${compiler_path} --filter-resource-file ${input_resource} -o ${new_resource_file} OUTPUT_VARIABLE remaining_files)
         list(APPEND filtered_rcc_files ${new_resource_file})
         list(APPEND loader_flags \"--resource-file-mapping=${_resource}=${new_resource_file}\")
 
