Add missing Examples with qml plugins
Add missing example projects which depended on the public QML plugin
API.

Change-Id: I05ed91e74eeaf6644700db13c3083fd110d96a62
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/examples/quick/CMakeLists.txt
+++ b/examples/quick/CMakeLists.txt
@@ -22,11 +22,8 @@ add_subdirectory(threading)
 add_subdirectory(touchinteraction)
 add_subdirectory(tutorials)
 add_subdirectory(customitems)
-# special case end
-# Needs public QML Plugin APO
-#add_subdirectory(imageprovider)
-#add_subdirectory(imageresponseprovider)
-# special case begin
+add_subdirectory(imageprovider)
+add_subdirectory(imageresponseprovider)
 add_subdirectory(window)
 add_subdirectory(particles)
 add_subdirectory(delegatechooser)
