--- a/examples/qml/CMakeLists.txt
+++ b/examples/qml/CMakeLists.txt
@@ -4,10 +4,7 @@ add_subdirectory(referenceexamples)
 add_subdirectory(tutorials)
 add_subdirectory(shell)
 if(TARGET Qt::Quick)
-# special case begin
-# Needs public QML api
-#    add_subdirectory(qmlextensionplugins)
-# special case end
+    add_subdirectory(qmlextensionplugins)
     add_subdirectory(xmlhttprequest)
 endif()
 if(QT_FEATURE_qml_network AND TARGET Qt::Quick)
